--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les films de plein air</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/fav/favicon-16x16.png">
+    <link rel="manifest" href="./images/fav/site.webmanifest">
+    <link rel="mask-icon" href="./images/fav/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="msapplication-TileImage" content="./images/fav/mstile-144x144.png">
+    <meta name="theme-color" content="#f88484">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -58,7 +68,7 @@
             </div>
             <article class="article">
                 <h2 class="title"> A propos</h2>
-                <p>En cette année 2021, nous organisons la toute première édition du festival "Les films de plein air" !
+                <p>En cette année 2018, nous organisons la toute première édition du festival "Les films de plein air" !
                 </p>
                 <p>Alors, si vous êtes intéressé par les films d'auteurs, ou si vous aimez tout simplement assister à
                     des projections de films en plein air, ce festival est fait pour vous !</p>
@@ -228,10 +238,10 @@
         <div class="footer__container">
             <div class="footer__menu">
                 <h2 class="footer__title">Liens utiles</h2>
-                <a href="">Accueil</a>
-                <a href="">Films</a>
-                <a href="">Actualités</a>
-                <a href="">Contact</a>
+                <a href="/index.html">Accueil</a>
+                <a href="./films.html">Films</a>
+                <a href="./news.html">Actualités</a>
+                <a href="./index.html#contact">Contact</a>
                 <a href="">Mentions légales</a>
             </div>
 
