--- a/news.html
+++ b/news.html
@@ -106,10 +106,10 @@
         <div class="footer__container">
             <div class="footer__menu">
                 <h2 class="footer__title">Liens utiles</h2>
-                <a href="">Accueil</a>
-                <a href="">Films</a>
-                <a href="">Actualités</a>
-                <a href="">Contact</a>
+                <a href="/index.html">Accueil</a>
+                <a href="./films.html">Films</a>
+                <a href="./news.html">Actualités</a>
+                <a href="./index.html#contact">Contact</a>
                 <a href="">Mentions légales</a>
             </div>
 
