--- a/films.html
+++ b/films.html
@@ -29,7 +29,7 @@
 
         <ul class="header__menu">
             <li><a href="./index.html">ACCUEIL</a></li>
-            <li><a href="">LES FILMS</a></li>
+            <li><a href="">LES FILMS DU FESTIVAL</a></li>
             <li><a href="./index.html#booking">RÉSERVATION</a></li>
 
             <li><a href="./news.html">ACTUALITÉS</a></li>
